--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,17 @@
   <script>
     AOS.init();
   </script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-W9W7RJZNT3"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-W9W7RJZNT3");
+  </script>
 </html>
