--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="Welcome to my professional portfolio. I am a software engineer specializing in web development, software solutions, and innovative technology. Explore my projects, skills, and contact information."
@@ -26,6 +27,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kabil's portfolio</title>
+    <meta property="og:title" content="Kabil's portfolio" />
+    <meta
+      property="og:description"
+      content="Welcome to my professional portfolio. I am a software engineer specializing in web development, software solutions, and innovative technology. Explore my projects, skills, and contact information."
+    />
+    <meta
+      property="og:image"
+      content="https://my-site-sooty-six.vercel.app/page.png"
+    />
+    <meta property="og:url" content="https://my-site-sooty-six.vercel.app/ " />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Kabil's portfolio" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
